--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>Tic Tac Toe ssc </h1>
     <div id="board">
       <div class="row">
         <div class="cell" data-row="0" data-col="0"></div>
